manifests/fullstack-back-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    app: backend-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
