manifests/fullstack-postgres-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
spec:
  selector:
    app: postgres-db 
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
