manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fullstack-demo-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: backend-svc
            port:
              number: 5000

      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend-svc
            port: 
              number: 3000
